--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v-calendar",
+  "name": "jajali-v-calendar",
   "version": "3.0.0-alpha.8",
   "description": "A clean and extendable plugin for building simple attributed calendars in Vue.js.",
   "author": "Nathan Reyes <nathanreyes@me.com>",
