--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jajali-v-calendar",
+  "name": "jalali-v-calendar",
   "version": "3.0.0-alpha.8",
   "description": "A clean and extendable plugin for building simple attributed calendars in Vue.js.",
   "author": "Nathan Reyes <nathanreyes@me.com>",
@@ -14,7 +14,7 @@
     "vuejs",
     "plugin",
     "calendar",
-    "jajali-v-calendar",
+    "jalali-v-calendar",
     "datepicker",
     "date picker"
   ],
@@ -24,12 +24,12 @@
     "dist",
     "types/*.d.ts"
   ],
-  "main": "dist/jajali-v-calendar.umd.js",
-  "module": "dist/jajali-v-calendar.es.js",
+  "main": "dist/jalali-v-calendar.umd.js",
+  "module": "dist/jalali-v-calendar.es.js",
   "exports": {
     ".": {
-      "import": "./dist/jajali-v-calendar.es.js",
-      "require": "./dist/jajali-v-calendar.umd.js"
+      "import": "./dist/jalali-v-calendar.es.js",
+      "require": "./dist/jalali-v-calendar.umd.js"
     },
     "./dist/style.css": "./dist/style.css"
   },
